tests/NormalTests/paczka1/small_fuzzy/16792969.err
Error in line 1: 1KB19 A666 88,3
Error in line 3: Qlyr S248 74,5
